# quadruped-nn-control-stack

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
application/: CMakeLists.txt
application/include/: application.h  utils.h
application/src/: utils.cpp
config/: final_motor_position.csv  mid_motor_position.csv  params.yaml  reset_motor_position.csv
controller/: CMakeLists.txt
controller/sine_controller/: CMakeLists.txt
controller/sine_controller/include/: sine_controller.h
controller/sine_controller/src/: sine_controller.cpp
controller/standup_controller/include/: bspline_interp.h  standup_controller.h
docs/: deploy_hardware.md
examples/: CMakeLists.txt  example_application.cpp  example_hardware_interface.cpp  example_position.cpp  fake_application.cpp  ros_application.cpp  unitree_application.cpp
hardware/: CMakeLists.txt
hardware/ideal_hardware/: CMakeLists.txt
hardware/ideal_hardware/include/: ideal_hardware.h
hardware/ideal_hardware/src/: ideal_hardware.cpp
hardware/ros_hardware/: CMakeLists.txt  package.xml
hardware/ros_hardware/include/: ros_hardware.h
hardware/ros_hardware/include/robot/: gazebo_comm.h
hardware/ros_hardware/include/types/: cpp_types.h  imu_types.h  motion_frame.hpp
hardware/ros_hardware/include/unitree_legged_msgs/: HighState.h  IMU.h  LowState.h  StateEstimate.h
hardware/ros_hardware/include/utils/: periodic_task.h  quadruped.h
hardware/ros_hardware/include/utils/interpolate/: cubic_polys.hpp  matrix_slerps.hpp  motion_frame_interpolator.hpp
hardware/ros_hardware/src/: ros_hardware.cpp
hardware/ros_hardware/src/robot/: gazebo_comm.cpp
hardware/ros_hardware/src/utils/: periodic_task.cpp  utilities_print.cpp
hardware/ros_hardware/src/utils/interpolate/: motion_frame_interpolator.cpp
hardware/ros_hardware/urdf/: aliengo.urdf  aliengo_rbdl.urdf
hardware/ros_hardware/yaml/: params.yaml
hardware/unitree_hardware/: CMakeLists.txt
hardware/unitree_hardware/include/: unitree_hardware.h
hardware/unitree_hardware/include/unitree_legged_sdk/: unitree_legged_sdk.h
hardware/unitree_hardware/src/: unitree_hardware.cpp
include/: joystick_comm.h
include/MiniDNN/: Actor.h  MiniDNN.h
include/MiniDNN/Activation/: LeakyReLU.h
include/controller/: Controller.h  DummyController.h  FixedPosController.h  NeuralController.h  ResetController.h  SequentialController.h  ZeroOrderHolder.h
include/estimator/: OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
include/types/: CustomTypes.h  imu_types.h  joint_command.hpp
include/utils/: eigen_quadsolve.hpp  orientation_tools.h  timer.h  utilities_print.h
include/utils/interpolate/: linear_pose_interpolator.hpp  quintic_polys.hpp  quintic_polys_pose.hpp
interfaces/: CMakeLists.txt
interfaces/include/: controller_interface.h  hardware_interface.h  logging.h  types.h
src/controller/: FixedPosController.cpp  NeuralController.cpp  ResetController.cpp  SequentialController.cpp  ZeroOrderHolder.cpp
src/estimator/: OrientationEstimator.cpp  PositionVelocityEstimator.cpp
src/utils/interpolate/: cubic_polys.cpp  linear_pose_interpolator.cpp  matrix_slerps.cpp  quintic_polys.cpp  quintic_polys_pose.cpp
unitree_interface/: CMakeLists.txt
unitree_interface/include/: hardware_interface.h
unitree_interface/src/: hardware_interface.cpp
